Update docs after changing the project structure

--- a/dokka/docs/kotlinlang/config.json
+++ b/dokka/docs/kotlinlang/config.json
@@ -2,7 +2,7 @@
   "showDownloadButton": false,
   "productVersion": "1.7.20",
   "fallbackUrl": "https://www.jetbrains.com/help//",
-  "productName": "Dokka",
+  "productName": "dokka",
   "downloadPage": "https://www.jetbrains.com//download/",
   "searchScope": "documentation-help",
   "stage": "release",
